<package>
  <name>kf</name>
  <version>0.1.0</version>
  <description>The ukf package</description>

  <maintainer email="andre.aguiar@fe.up.pt">André Aguiar</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ckame_modules</build_depend>
  <run_depend>cmake_modules</run_depend>


</package>
