<package>
  <name>viso2</name>
  <version>0.0.1</version>
  <description>
    A ROS-Wrapper for libviso2, a library for visual odometry, 
    maintained by the Systems, Robotics and Vision group of the 
    University of the Balearic Islands, Spain. http://srv.uib.es
  </description>
  
  <license>GPL</license>

  <url type="website">http://ros.org/wiki/viso2</url>
  <url type="bugtracker">https://github.com/srv/viso2/issues</url>

  <author email="stephan.wirth@uib.es">Stephan Wirth</author>
  <maintainer email="stephan.wirth@uib.es">Stephan Wirth</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>libviso2</run_depend>
  <run_depend>viso2_ros</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
