<package>
  <name>viso2_ros</name>
  <version>0.0.1</version>
  <description>This is the ROS wrapper for libviso2, library for visual odometry (see package libviso2).</description>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/viso2_ros</url>
  <url type="bugtracker">https://github.com/srv/viso2/issues</url>

  <author email="stephan.wirth@uib.es">Stephan Wirth</author>
  <maintainer email="stephan.wirth@uib.es">Stephan Wirth</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libviso2</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend> 
  <build_depend>message_filters</build_depend> 
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend> 
  <build_depend>image_geometry</build_depend> 
  <build_depend>tf</build_depend> 
  <build_depend>PCL</build_depend>
  <build_depend>pcl_ros</build_depend> 
  <build_depend>std_srvs</build_depend> 
  <build_depend>message_generation</build_depend> 
  
  <run_depend>libviso2</run_depend> 
  <run_depend>roscpp</run_depend> 
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_geometry</run_depend> 
  <run_depend>tf</run_depend>
  <run_depend>PCL</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
